# StackManager

./: CMakeLists.txt  LICENSE  README.md
clitools/: StackManagerSimulator.c  StackManagerSimulatorQ.c  StackSimulator2.c
include/: StackManager.h
src/: Converter.c  StackManager.c
test/: CMakeLists.txt  StackManagerSimulator.c
